checkbox and mqtt logic

--- a/index.html
+++ b/index.html
@@ -2,34 +2,29 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-		<title>Node.js Chat</title>
+		<title>Change LED</title>
 		<style>
 			* {margin:0; padding: 0; box-sizing: border-box;}
 			body {font: 13px Helvetica, Arial;}
-			form {background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%;}
-			form input {border: 0; padding: 10px; width: 90%; margin-right: .5%;}
-			form button {width: 9%; background: rgb(130, 224, 255); border: none, padding: 10px;}
-			#messages {list-style-type: none; margin: 0; padding: 0;}
-			#messages li {padding: 5px 10px;}
-			#messages li:nth-child(odd) {background: #eee}
 		</style>
 	</head>
 	<body>
-		<ul id="messages"></ul>
-		<form action="">
-			<input id="m" autocomplete="off" /><button>Send</button>
-		</form>
+		<label for="ledStatus">LED Status: <input type="checkbox" id="ledStatus"/></label>
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 		<script>
 			var socket = io();
-			$('form').submit(function() {
-				socket.emit('chat message', $('#m').val());
-				$('#m').val('');
-				return false;
-			});
-			socket.on('chat message', function(msg) {
-				$('#messages').append($('<li>').text(msg));
+			$('#ledStatus').on('click', function(e) {
+				socket.emit('ledStatus', ($('#ledStatus').is(':checked')) ? '1' : '0');
+
+				socket.on('ledStatusChange', function(msg) {
+					console.log('arrived: ' + msg);
+					if (msg == '1') {
+						$('#ledStatus').attr('checked', true);
+					} else {
+						$('#ledStatus').attr('checked', false);
+					}
+				});
 			});
 		</script>
 	</body>
